# awskiro

./: .$wac-prod-architecture-v2.drawio.dtmp  .gitignore  ARCHITECTURE-DIAGRAM.md  AWS-Official-Documentation-Infrastructure-Report.md  Add-VPN-Firewall-Rule.ps1  American-Airlines-NXOP-Migration-Phases-Technical-Guide.md  CLAWBOT-SETUP-README.md  CONVERT-TO-WORD-INSTRUCTIONS.md  Connect-To-Active-Directory-Guide.md  Convert-To-Word.ps1  DELIVERY-SUMMARY.md  Diagnose-Prod-VPN-Connectivity.ps1  Diagnose-VPN-Connectivity.ps1  FINAL-CONFIRMATION.md  Fix-Prod-VPN-Access.md  Fix-VPN-Endpoint.ps1  GITHUB-SETUP-GUIDE.md  GITHUB-TOKEN-FIX.md  GITHUB-UPLOAD-COMPLETE-SUMMARY.md  GITHUB-UPLOAD-INSTRUCTIONS.md  Generate-VPN-Certificates-Fixed.ps1  Generate-VPN-Certificates.ps1  HOW-TO-GET-GITHUB-TOKEN.md  HRI-FAST-Scanner-Lambda-Functions.md  HRI_FAST_Scanner_Access_Analysis.md  Install-OpenSSL-Manual.md  NXOP-Complete-Overview-Summary.md  NXOP-Data-Governance-Framework-Detailed.md  NXOP-Data-Model-Governance-Comprehensive.md  NXOP-Data-Model-Governance-Executive-Brief.md  NXOP-Governance-Document-Summary.md  NXOP-Project-Complete-Overview-A-to-Z.md  NXOP-Services-Explained-For-Beginners.md  OPERATIONAL-PROCEDURES-LOCATION.md  PHASE3-COMPLETE-SUMMARY.md  PHASE3-READY-TO-IMPLEMENT.md  PRODUCTION-IMPLEMENTATION-COMPLETE.md  PRODUCTION-IMPLEMENTATION-GUIDE.md  PRODUCTION-PHASE3-INSTALLATION-GUIDE.md  PRODUCTION-PHASE3-QUICK-START.md  (+52 more)
03-Projects/cloudoptima-ai/: .env.example  .gitignore  AGENT-STATUS-REPORT.md  AWS-DEPLOYMENT-GUIDE.md  AWS-QUICKSTART.md  AZURE-DEPLOYMENT-GUIDE.md  AZURE-FREE-TIER-ANALYSIS.md  AZURE-QUICKSTART.md  AZURE-TERRAFORM-SUMMARY.md  BACKEND_ASSESSMENT.md  BEFORE-YOU-DEPLOY.md  COMPLETION-SUMMARY.md  CURRENT-STATUS.md  DATABASE-ANALYSIS.md  DEMO-GUIDE.md  DEMO-QUICK-START.md  (+84 more)
(+797 files in other folders)
